--- a/phone/src/main/res/layout-xhdpi/fragment_info_interval.xml
+++ b/phone/src/main/res/layout-xhdpi/fragment_info_interval.xml
@@ -1,26 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="80dp"
+
     tools:context="vssnake.intervaltraining.customFragments.InfoIntervalFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentStart="true"
+    android:id="@+id/infoInterval_move_View"
     android:background="#ff5722">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/infoInterval_move_View">
+
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="80dp"
+            android:id="@+id/linearLayout"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/linearLayout">
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -59,19 +59,16 @@
                 android:background="@color/black"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginRight="30dp" />
+                />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/tabata"
-                android:id="@+id/infoInterval_Title_TextView"
-                android:gravity="center"
-                android:textSize="30dp"
-                android:textColor="@color/black"
-                android:layout_above="@+id/linearLayout"
-                android:layout_alignParentStart="true" />
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/infoInterval_tick_image"
+                android:layout_weight="50"
+                android:src="@drawable/downtick"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"/>
 
             <View
                 android:layout_width="1dp"
@@ -80,7 +77,7 @@
                 android:background="@color/black"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="30dp" />
+                />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -111,6 +108,17 @@
                     android:layout_marginTop="-10dp" />
             </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/infoInterval_list_name"
+        android:layout_above="@+id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
+        android:headerDividersEnabled="false"
+        android:footerDividersEnabled="false"
+        android:background="@android:color/white"/>
+
 
 </RelativeLayout>
