[shared] -Add a new library. This library is shared instead phone  and wear app. -Create a method to safe the intervals in a file using json [utils] -Add a new library for generic utils. -Create a primitive sliding Menu [phone] -Implemented a sliding menu. -Implemented a lot of Hiit Modes. -Little fix errors.
[wear]
-Now android wear app should refresh correctly.
-Added android wear circle mode (New testing).
-New UI for square watches.
-The train type should be show.

--- a/phone/src/main/res/layout-xhdpi/fragment_info_interval.xml
+++ b/phone/src/main/res/layout-xhdpi/fragment_info_interval.xml
@@ -7,7 +7,7 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentStart="true"
     android:id="@+id/infoInterval_move_View"
-    android:background="#ff5722">
+    >
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -20,7 +20,8 @@
             android:id="@+id/linearLayout"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:background="#ff5722">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -113,12 +114,20 @@
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:id="@+id/infoInterval_list_name"
-        android:layout_above="@+id/linearLayout"
         android:layout_centerHorizontal="true"
         android:layout_alignParentEnd="true"
         android:headerDividersEnabled="false"
         android:footerDividersEnabled="false"
-        android:background="@android:color/white"/>
+        android:background="@android:color/white"
+        android:layout_above="@+id/infoInterval_AddButton"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Add"
+        android:id="@+id/infoInterval_AddButton"
+        android:layout_above="@+id/linearLayout"
+        android:layout_centerHorizontal="true"/>
 
 
 </RelativeLayout>
