--- a/phone/src/main/res/layout/list_intervals.xml
+++ b/phone/src/main/res/layout/list_intervals.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentTop="false"
         android:layout_marginRight="6dip"
         android:contentDescription="TODO"
-        android:src="@drawable/ic_launcher"
+        android:src="@drawable/launcher"
         android:layout_alignParentStart="false"
         android:scaleType="fitXY"
         android:layout_centerVertical="true"
