[General] -Update Play services -Add support Annotations
[Wear]
-Add new images
-Add new Round layouts
-Litle Fixes
[Utils]
-Create a activity that returns a hour or a number in your spinners
[Shared_lib]
-Modify the algorithm to format the time.
-Add new URL to WearableService
-A lot of changes in IntervalStaticData to allow the new Synchronization
-Put straining status outside of the class TrainingBase_Service
[Phone]
-Remove the icons in the list.
-Add a library for custom Dialogs (uk.me.lewisdeane.ldialogs)
-Create a model for shared information between the phone and watch.
-Create a edit mode and creation mode for intervals.
-Fix little bug with the width of of the total timer View

--- a/phone/src/main/res/layout-hdpi/fragment_chronometer.xml
+++ b/phone/src/main/res/layout-hdpi/fragment_chronometer.xml
@@ -61,9 +61,9 @@
         android:layout_toStartOf="@+id/chronometerTotalText_TextView"
         android:text="00:00"
         android:layout_below="@+id/chronometerTotalText_TextView"
-        android:layout_alignLeft="@+id/chronometerTotalText_TextView"
-        android:layout_alignStart="@+id/chronometerTotalText_TextView"
-        android:layout_alignRight="@+id/chronometerTotalText_TextView"
-        android:layout_alignEnd="@+id/chronometerTotalText_TextView"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
