--- a/phone/src/main/res/values/colors.xml
+++ b/phone/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="rest_Interval">#4db6ac</color>
     <color name="numbers_interval_goo">#ffff</color>
     <color name="numbers_interval_rest">#ff419426</color>
+    <color name="orange">#ff5722</color>
 </resources>
