--- a/wear/src/main/res/layout/activity_list_train.xml
+++ b/wear/src/main/res/layout/activity_list_train.xml
@@ -1,14 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.wearable.view.WatchViewStub
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:rectLayout="@layout/activity_list_train_rect"
+    app:roundLayout="@layout/activity_list_train_round"
     tools:context="com.vssnake.intervaltraining.wear.interval.ListTrainActivity"
-    android:background="@android:color/white">
+    android:id="@+id/activity_list_train_view_stub">
 
-    <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/listViewTraining"
-        android:layout_alignParentBottom="true"/>
 
-</RelativeLayout>
+</android.support.wearable.view.WatchViewStub>
