--- a/phone/src/main/res/layout-xhdpi/fragment_chronometer.xml
+++ b/phone/src/main/res/layout-xhdpi/fragment_chronometer.xml
@@ -49,7 +49,7 @@
         android:layout_centerInParent="true"/>
 
     <vssnake.intervaltraining.utils.TextViewPlus
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
 
@@ -61,9 +61,9 @@
         android:layout_toStartOf="@+id/chronometerTotalText_TextView"
         android:text="00:00"
         android:layout_below="@+id/chronometerTotalText_TextView"
-        android:layout_alignLeft="@+id/chronometerTotalText_TextView"
-        android:layout_alignStart="@+id/chronometerTotalText_TextView"
-        android:layout_alignRight="@+id/chronometerTotalText_TextView"
-        android:layout_alignEnd="@+id/chronometerTotalText_TextView"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
