--- a/phone/src/main/res/layout-xhdpi/fragment_info_interval.xml
+++ b/phone/src/main/res/layout-xhdpi/fragment_info_interval.xml
@@ -7,7 +7,7 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentStart="true"
     android:id="@+id/infoInterval_move_View"
-    >
+    android:background="@color/white">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -127,7 +127,8 @@
         android:text="Add"
         android:id="@+id/infoInterval_AddButton"
         android:layout_above="@+id/linearLayout"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        />
 
 
 </RelativeLayout>
