--- a/phone/src/main/res/layout/activity_interval_editor.xml
+++ b/phone/src/main/res/layout/activity_interval_editor.xml
@@ -4,164 +4,158 @@
     android:layout_height="match_parent"
     tools:context="vssnake.intervaltraining.interval.IntervalEditorActivity">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/scrollView">
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/IE_nameInterval"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"/>
+
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/interval_editor_name"
+            android:maxLength="30"
+            android:singleLine="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"/>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:paddingTop="20dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/IE_nameInterval"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"/>
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/interval_editor_name"
-                android:layout_below="@+id/textView"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:maxLength="30"
-                android:singleLine="true"
-                />
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/interval_editor_name"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:background="@color/greenDark"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/IE_description"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"/>
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/interval_editor_description"
-                android:layout_below="@+id/textView"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:maxLength="120"/>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/interval_editor_name"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:background="@color/greenDark"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"/>
-
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:id="@+id/IE_Effort">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/IE_secondsEffort"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"/>
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:inputType="numberSigned"
-                android:ems="10"
-                android:id="@+id/intervalEditor_secondsEffort"
-                android:layout_gravity="center"
-                android:maxLength="3"/>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
+                android:layout_toEndOf="@+id/textView4"
                 android:layout_below="@+id/interval_editor_name"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:background="@color/greenDark"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"/>
+                android:layout_weight="20"
+                />
+
+            <view
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                class="vssnake.intervaltraining.utils.TextViewPlus"
+                android:layout_weight="80"
+                android:text="0"
+                android:layout_gravity="center"
+                android:gravity="right"
+                android:id="@+id/IE_txt_SecondsEffort"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingLeft="20dp"
+            android:paddingTop="20dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="20dp"
+            android:id="@+id/IE_Rest">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/IE_secondsRest"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                />
+                android:layout_weight="20"/>
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:inputType="numberSigned"
-                android:ems="10"
-                android:layout_gravity="center"
-                android:maxLength="3"
-                android:id="@+id/intervalEditor_secondsRest"/>
-
-            <View
+            <view
                 android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/interval_editor_name"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:background="@color/greenDark"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"/>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/IE_back"
-                    android:id="@+id/intervalEditor_btnBack"
-                    android:layout_weight="50"/>
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/IE_save"
-                    android:id="@+id/intervalEditor_btnOK"
-                    android:layout_weight="50"/>
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                class="vssnake.intervaltraining.utils.TextViewPlus"
+                android:id="@+id/IE_txt_SecondsRest"
+                android:layout_weight="80"
+                android:text="0"
+                android:textAlignment="gravity"
+                android:gravity="right"/>
 
         </LinearLayout>
-    </ScrollView>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:id="@+id/IE_Intervals"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/IE_numberIntervals"
+                android:layout_toEndOf="@+id/textView5"
+                android:layout_below="@+id/textView5"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_weight="20"/>
+
+            <view
+                class="vssnake.intervaltraining.utils.TextViewPlus"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/IE_txt_NumberIntervals"
+                android:layout_weight="80"
+                android:text="0"
+                android:textAlignment="gravity"
+                android:gravity="right"/>
+
+
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"/>
+    </LinearLayout>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/IE_save"
+        android:id="@+id/IE_btnSave"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
+
 
 </RelativeLayout>
