--- a/wear/src/main/res/layout/activity_train_description_rect.xml
+++ b/wear/src/main/res/layout/activity_train_description_rect.xml
@@ -7,15 +7,24 @@
                 tools:context="vssnake.intervaltraining.TrainDescription">
 
 
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/imageView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/hiit_i"
+        android:alpha="0.2"/>
+
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Hiit Endurance Inter-Advanced"
         android:id="@+id/train_descrip_name"
-        android:layout_alignParentTop="true"
         android:gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:layout_alignParentTop="true"
+        android:background="#32ff0000"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -32,7 +41,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/train_descrip_name"
             android:layout_marginTop="12dp"
-            android:layout_gravity="center">
+            >
 
             <TextView
                 android:layout_width="fill_parent"
@@ -40,7 +49,9 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
                 android:id="@+id/train_descrip_description"
-                android:gravity="center_vertical|center_horizontal"/>
+                android:textColor="@color/white"
+                android:textAlignment="gravity"
+                android:gravity="center_horizontal"/>
         </ScrollView>
     </LinearLayout>
 
@@ -51,6 +62,7 @@
         android:id="@+id/train_descrip_button_start"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:singleLine="false"/>
+        android:singleLine="false"
+        android:alpha="0.8"/>
 
 </RelativeLayout>
