--- a/wear/src/main/res/layout/activity_train_description_round.xml
+++ b/wear/src/main/res/layout/activity_train_description_round.xml
@@ -4,56 +4,75 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context="vssnake.intervaltraining.TrainDescription">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/train_descrip_icon"
-        android:src="@drawable/a_track"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Hiit Endurance Inter-Advanced"
-        android:id="@+id/train_descrip_name"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/train_descrip_icon"
-        android:layout_alignBottom="@+id/train_descrip_icon"
-        android:layout_marginTop="20dp"/>
-
-    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/train_descrip_icon"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/train_descrip_button_start">
+        android:layout_height="fill_parent"
+        android:id="@+id/imageView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/hiit_i"
+        android:alpha="0.2"/>
+
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:id="@+id/frameLayout"
+        android:background="#32ff0000">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/train_descrip_description"
-            android:layout_below="@+id/train_descrip_icon"
+            android:text="ooooooooooooooooooooooooooooo"
+            android:id="@+id/train_descrip_name"
+            android:layout_alignParentTop="true"
+            android:gravity="center"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:textColor="@color/white"/>
+    </FrameLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/train_descrip_button_start"
+        android:gravity="center"
+        android:layout_below="@+id/frameLayout">
+
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignEnd="@+id/train_descrip_name"/>
-    </ScrollView>
+            android:layout_above="@+id/train_descrip_button_start"
+            android:layout_below="@+id/train_descrip_name"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Medium Text"
+                android:id="@+id/train_descrip_description"
+                android:textColor="@color/orange"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical|center_horizontal"
+                />
+        </ScrollView>
+    </LinearLayout>
 
     <Button
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="@string/go_train"
         android:id="@+id/train_descrip_button_start"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/train_descrip_icon"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentEnd="true"
+        android:alpha="0.6"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
