--- a/wear/src/main/res/layout/round_activity_my.xml
+++ b/wear/src/main/res/layout/round_activity_my.xml
@@ -8,46 +8,16 @@
                 tools:deviceIds="wear_round">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="NOTHING"
-        android:id="@+id/interval_State"
-        android:textSize="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:background="@color/grey"
-        android:layout_below="@+id/interval_round"/>
-
-    <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="00:00"
         android:id="@+id/interval_time"
         android:gravity="center"
-        android:textSize="50dp"
+        android:textSize="45dp"
         android:textColor="@color/white"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="0 of 0"
-        android:id="@+id/interval_round"
-        android:textSize="20dp"
-        android:textColor="@color/white"
-        android:background="#ffff0002"
-        android:layout_alignBottom="@+id/interval_totalTime"
-        android:layout_marginBottom="6dp"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/interval_totalTime"
-        android:layout_marginLeft="5dp"/>
+        android:layout_below="@+id/frameLayout"
+        android:layout_alignEnd="@+id/interval_round"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -60,20 +30,56 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:layout_below="@+id/interval_time"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        />
+
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:id="@+id/frameLayout">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="60dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/interval_Name"
+            android:textColor="@color/white"
+            android:background="#ffff0300"
+            android:text="ooooooooooooooooooooooooooooo"
+            android:gravity="center"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
+    </FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="0 of 0"
+        android:id="@+id/interval_round"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:layout_toEndOf="@+id/interval_totalTime"
+        android:background="#ffff0300"
+        android:paddingRight="10dp"
+        android:layout_above="@+id/interval_State"
+        android:layout_marginLeft="3dp"/>
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="41dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/interval_Name"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_height="45dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="ROUND"
+        android:id="@+id/interval_State"
+        android:textSize="20dp"
+        android:gravity="center"
         android:textColor="@color/white"
-        android:background="#ffff0300"
-        android:layout_above="@+id/interval_time"
-        android:text="Hiit Alacted Iterm- Advanced"
-        android:gravity="bottom|center_horizontal"/>
+        android:background="@color/grey"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:paddingBottom="5dp"/>
 
 
 </RelativeLayout>
