--- a/phone/src/main/res/layout-hdpi/notification_interval_l.xml
+++ b/phone/src/main/res/layout-hdpi/notification_interval_l.xml
@@ -41,7 +41,7 @@
                 android:alpha="0.6" />
 
             <TextView
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="2/8"
