--- a/wear/src/main/res/layout/activity_train_description_round.xml
+++ b/wear/src/main/res/layout/activity_train_description_round.xml
@@ -39,10 +39,10 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/train_descrip_button_start"
+        android:layout_height="105dp"
         android:gravity="center"
-        android:layout_below="@+id/frameLayout">
+        android:layout_below="@+id/frameLayout"
+        android:id="@+id/linearLayout">
 
         <ScrollView
             android:layout_width="fill_parent"
@@ -67,12 +67,14 @@
 
     <Button
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:text="@string/go_train"
         android:id="@+id/train_descrip_button_start"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:alpha="0.6"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="-10dp"
+        android:paddingBottom="20dp"/>
 
 </RelativeLayout>
